fixes some mouse behavior, need to finish work on overflowing numbers

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,16 +123,16 @@ body {
 }
 #display {
   color: $button-font-white;
-  font-size: 50px;
   font-weight: 100;
   height: 58px;
   text-align: right;
+}
 
-  span {
+#display-window{
     line-height: 55px;
     padding-right: 16px;
     vertical-align: top;
-  }
+    font-size: 50px;
 }
 .buttons {
   text-align: center;
